bk_ida/gobmkida/c1/create_new_string
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/create_new_string/src/engine/board.c:3549:6: error: use of undeclared identifier 'byte_9AA89F'
if ( byte_9AA89F[pos] ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/create_new_string/src/engine/board.c:3551:30: error: use of undeclared identifier 'byte_9AA89F'
if ( v3 == ( unsigned __int8)byte_9AA89F[pos] ) 
                             ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/create_new_string/src/engine/board.c:3579:6: error: use of undeclared identifier 'byte_9AA88C'
if ( byte_9AA88C[pos] ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/create_new_string/src/engine/board.c:3581:30: error: use of undeclared identifier 'byte_9AA88C'
if ( v3 == ( unsigned __int8)byte_9AA88C[pos] ) 
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/create_new_string/src/obj/1/board.o] Error 1
